Fix song name overflowing to a third line.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,8 @@
 }
 
 #state {
-	height: 125px;
+	height: 93px;
+	margin-bottom: 35px;
 	overflow: hidden;
 }
 
